<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:background="@android:color/transparent"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_list_black"
        android:background="@android:color/transparent"
        android:title="@string/history" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/ic_map_black"
        android:background="@android:color/transparent"
        android:title="@string/title_maps" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_black"
        android:background="@android:color/transparent"
        android:title="@string/title_profile" />

</menu>